<resources>
    <string name="app_name">App_RadioButton</string>
    <string name="txt_num1_String">Ingresa Numero 1</string>
    <string name="txt_num2_string">Ingresa Numero 2</string>
    <string name="rb_sumar_string">Sumar</string>
    <string name="rb_restar_string">Restar</string>
    <string name="btn_calcular_string">Calcular</string>
    <string name="tv_resultado_string">Resultado</string>
</resources>